# bitwuzla-sys

./: Cargo.toml  build-vendor.rs  build.rs
src/: lib.rs
src-generated/: bindings.rs  update-bindings.sh
